examples/datalog/10_edge_cases/116_parallel_edges.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_parallel
Knowledge graph 'test_parallel' created.
Switched to knowledge graph: test_parallel
> .kg use test_parallel
Switched to knowledge graph: test_parallel
> +multi_edge[("a", "b", 1), ("a", "b", 2), ("a", "b", 3), ("b", "c", 1)].
Inserted 4 fact(s) into 'multi_edge'.
> edge_count(A, B, <COUNT:Label>) :- multi_edge(A, B, Label).
Script error: Parse error: Unknown aggregate function: 
